Fixed Opacity on iOS

--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ p {
 	text-align: center;
 }
 .parcont { /* parallax container */
-	/* margin: 0 14% 0 14%;  Top Left Bottom Right */
+	display: inline-block;
 	padding: 48px;
 	background: rgb(224, 224, 224, 0.9);
 	
